--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,84 @@
-a{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background: #EAEBEF;
+}
+img{
+    width: 40%;
+}
+.nav {
+  width: 300px;
+}
+.nav__link{
+    color: #303440;
+    display: block;
+    padding: 15px 0;
     text-decoration: none;
+}
+.nav__link--inside{
+    border-radius: 6px;
+    padding-left: 20px;
+}
+.nav__link--inside:hover{
+    background: #F6F8FA
+}
+.list{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 0 16px 16px 0;
+    background: #fff;
+}
+
+.list__item{
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+}
+.list__item--click{
+    cursor: pointer;
+}
+.list__button{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    width: 70%;
+    margin: 0 auto;
+}
+.arrow .list__arrow{
+    transform: rotate(90deg);
+}
+.list__arrow{
+    margin-left: auto;
+    transition: transform .3s;
+}
+.list__show{
+    width: 80%;
+    margin-left: auto;
+    border-left: 2px solid #303440;
+    list-style: none;
+    transition: height .4s;
+    height: 0;
+}
+
+.container{
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+}
+.informacion {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: auto;
+    font-size: 1.4rem;
+}
+.informacion p[name]::before{
+    content: attr(name);
+    font-weight: bold;
 }
